--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </div>
 
     <div id="transaction-area">
-     <div class="row">
+     <div class="row d-flex align-items-center just">
       <div class="col-md-4">
        <div class="deposit status">
         <h5>Deposit</h5>
